--- a/app/package.json
+++ b/app/package.json
@@ -4,16 +4,23 @@
   "description": "This project serves the purpose of testing Mocha, Jest and Jasmine for testing a WebApp.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js",
+    "test_mocha": "mocha mocha",
+    "test_jest": "jest jest",
+    "test_jasmine": "npx jasmine"
   },
   "author": "Sebastian Toporsch",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "jasmine": "^3.10.0",
-    "jest": "^27.3.1",
-    "mocha": "^9.1.3",
+    "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.14",
     "pug": "^3.0.2"
-  }
+  },
+  "devDependencies": {
+    "jasmine": "^3.10.0",
+    "jest": "^27.3.1",
+    "mocha": "^9.1.3"
+  },
+  "type": "module"
 }
