--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^9.4.1",
     "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.14",
     "pug": "^3.0.2"
