--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "author": "Sebastian Toporsch",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.0",
