--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "testing_frameworks",
   "version": "1.0.0",
   "description": "This project serves the purpose of testing Mocha, Jest and Jasmine for testing a WebApp.",
-  "main": "app.js",
+  "main": "app/src/app.ts",
   "scripts": {
-    "start": "nodemon app.js",
-    "test_mocha": "mocha tests/mocha",
-    "test_jest": "jest tests/jest",
-    "test_jasmine": "jasmine"
+    "build":"tsc",
+    "start": "nodemon build/server.js",
+    "create-db": "node build/db/create-db.js",
+    "test_mocha": "mocha app/tests/mocha",
+    "test_jest": "jest app/tests/jest",
+    "test_jasmine": "cd app/tests && jasmine"
   },
   "author": "Sebastian Toporsch",
   "license": "ISC",
@@ -16,13 +18,17 @@
     "express": "^4.17.1",
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.14",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.1",
+    "@types/node": "^14.11.2",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
-    "mocha": "^9.1.3"
-  },
-  "type": "module"
+    "mocha": "^9.1.3",
+    "typescript": "^4.0.3"
+  }
 }
