changed example env to suit current development status

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-PORT=
-DB_PORT=
+#PORT WHERE APP IS HOSTED
+PORT=8080
+
+#DATABASE DATA
+DATABASE_NAME=frameworks
+DATABASE_HOST=localhost
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DB_PORT=3306
