simplified fodler structure and edited sample data for .env.example

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,7 +1,7 @@
 #PORT WHERE APP IS HOSTED
 PORT=8080
 
-#DATABASE DATA
+#SAMPLE DATABASE DATA
 DATABASE_NAME=frameworks
 DATABASE_HOST=localhost
 DATABASE_USER=root
