--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "outDir": "./build",
-    "rootDir": "./app",
+    "rootDir": ".",
     "esModuleInterop": true,
   },
   "include": [
-    "app/server.ts",
-    "app/db/create-db.ts"
+    "server.ts",
+    "db/create-db.ts"
   ],
   "exclude": []
 }
