--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This project serves the purpose of testing Mocha, Jest and Jasmine for testing a WebApp.",
   "main": "server.ts",
   "scripts": {
-    "build":"tsc",
-    "start": "nodemon build/server.js",
+    "build": "tsc",
+    "start": "tsc && nodemon build/server.js",
     "create-db": "tsc && node build/db/create-db.js",
     "test_mocha": "mocha tests/mocha",
     "test_jest": "jest tests/jest",
@@ -14,18 +14,21 @@
   "author": "Sebastian Toporsch",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "firebase": "^9.4.1",
-    "firebase-admin": "^10.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
     "pug": "^3.0.2",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
-    "@types/node": "^14.11.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^14.18.1",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
     "mocha": "^9.1.3",
