--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
     "pug": "^3.0.2",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "ws": "^7.5.6"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
