--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "testing_frameworks",
   "version": "1.0.0",
   "description": "This project serves the purpose of testing Mocha, Jest and Jasmine for testing a WebApp.",
-  "main": "server.ts",
+  "main": "rest_server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && nodemon build/server.js",
+    "start_rest": "tsc && nodemon build/rest_server.js",
+    "start_ws": "tsc && nodemon ws_server.ts",
     "create-db": "tsc && node build/db/create-db.js",
     "test_mocha": "mocha tests/mocha",
     "test_jest": "jest tests/jest",
@@ -17,11 +18,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-ws": "^5.0.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
-    "typescript": "^4.5.2",
-    "ws": "^7.5.6"
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
