--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "create-db": "tsc && node build/db/create-db.js",
     "test_mocha": "mocha tests/mocha",
     "test_jest": "jest tests/jest",
-    "test_jasmine": "cd tests && jasmine"
+    "test_jasmine": "cd tests && npx jasmine"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "author": "Sebastian Toporsch",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-ws": "^5.0.2",
@@ -24,15 +30,21 @@
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
     "pug": "^3.0.2",
-    "socket.io": "^4.4.1"
+    "request": "^2.88.2",
+    "socket.io": "^4.4.1",
+    "supertest": "^6.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
     "@tsconfig/node14": "^1.0.1",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.19",
     "@types/node": "^14.18.1",
+    "babel-jest": "^27.4.6",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
     "mocha": "^9.1.3",
