--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "superagent": "^7.0.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
