--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start_rest": "tsc && nodemon build/rest_server.js",
-    "start_ws": "tsc && nodemon ws_server.ts",
+    "start_ws": "tsc && nodemon build/ws_server.js",
     "create-db": "tsc && node build/db/create-db.js",
     "test_mocha": "mocha tests/mocha",
     "test_jest": "jest tests/jest",
@@ -19,10 +19,8 @@
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-ws": "^5.0.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
-    "path": "^0.12.7",
     "pug": "^3.0.2",
     "superagent": "^7.0.2"
   },
