--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
   },
   "include": [
+    "util/database-functions.ts",
     "rest_server.ts",
     "ws_server.ts",
     "public/scripts/client.tsient.ts",
