Added scrips and removed unecessary WebSocket code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testing_frameworks",
   "version": "1.0.0",
-  "description": "This project serves the purpose of testing Mocha, Jest and Jasmine for testing a WebApp.",
+  "description": "This project serves the purpose of testing Mocha, Jest and Jasmine with a WebApp.",
   "main": "rest_server.ts",
   "scripts": {
     "build": "tsc",
@@ -9,13 +9,14 @@
     "start_ws": "tsc && nodemon build/ws_server.js",
     "create-db": "tsc && node build/db/create-db.js",
     "test_mocha": "mocha tests/mocha",
-    "test_jest_cache": "jest --clearCache",
-    "test_jest_details":"jest --clearCache && jest --verbose tests/jest",
     "test_jest": "jest --clearCache && jest tests/jest",
+    "test_jest_cache": "jest --clearCache",
+    "test_jest_coverage":"jest --clearCache && jest --coverage tests/jest",
+    "test_jest_details":"jest --clearCache && jest --verbose tests/jest",
     "test_jest_workers_50": "jest --clearCache && jest --maxWorkers=50% tests/jest",
     "test_jest_workers_25": "jest --clearCache && jest --maxWorkers=25% tests/jest",
     "test_jest_inBand": "jest --clearCache && jest --runInBand tests/jest",
-    "test_jasmine": "cd tests && npx --verbose jasmine "
+    "test_jasmine": "cd tests && npx jasmine "
   },
   "author": "Sebastian Toporsch",
   "license": "ISC",
