--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start_rest": "tsc && nodemon build/rest_server.js",
     "start_ws": "tsc && nodemon build/ws_server.js",
     "create-db": "tsc && node build/db/create-db.js",
+    "mocha_version": "mocha --version",
     "test_mocha": "mocha tests/mocha",
     "test_jest": "jest --clearCache && jest tests/jest",
+    "jest_version": "jest --version",
     "test_jest_cache": "jest --clearCache",
-    "test_jest_coverage":"jest --clearCache && jest --coverage tests/jest",
-    "test_jest_details":"jest --clearCache && jest --verbose tests/jest",
+    "test_jest_coverage": "jest --clearCache && jest --coverage tests/jest",
+    "test_jest_details": "jest --clearCache && jest --verbose tests/jest",
     "test_jest_workers_50": "jest --clearCache && jest --maxWorkers=50% tests/jest",
     "test_jest_workers_25": "jest --clearCache && jest --maxWorkers=25% tests/jest",
     "test_jest_inBand": "jest --clearCache && jest --runInBand tests/jest",
