--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^2.0.14",
     "npm": "^8.10.0",
     "pug": "^3.0.2",
+    "sinon": "^14.0.0",
     "superagent": "^7.0.2"
   },
   "devDependencies": {
