--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "This project serves the purpose of testing Mocha, Jest and Jasmine with a WebApp.",
   "main": "rest_server.ts",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start_rest": "tsc && nodemon build/rest_server.js",
-    "start_ws": "tsc && nodemon build/ws_server.js",
-    "create-db": "tsc && node build/db/create-db.js",
+    "start_rest": "nodemon rest_server.js",
+    "start_ws": "nodemon ws_server.js",
+    "create-db": "node db/create-db.js",
     "test_mocha": "mocha tests/mocha",
-    "test_jest": "jest --clearCache && jest tests/jest",
+    "test_jest": "jest --clearCache && jest --detectOpenHandles tests/jest",
     "jest_version": "jest --version",
     "mocha_version": "mocha --version",
     "jasmine_version": "jasmine -v",
@@ -27,6 +27,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
@@ -34,19 +35,35 @@
     "npm": "^8.10.0",
     "pug": "^3.0.2",
     "sinon": "^14.0.0",
-    "superagent": "^7.0.2"
+    "superagent": "^7.0.2",
+    "supertest": "^6.2.3"
+  },
+  "env": {
+    "test": {
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs"
+      ]
+    }
+  },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "jest-environment-node",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@tsconfig/node14": "^1.0.1",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.19",
     "@types/node": "^14.18.1",
+    "babel-jest": "^27.5.1",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
-    "mocha": "^9.1.3",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4"
+    "mocha": "^9.1.3"
   }
 }
