Added seperate Sever

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,6 +1,7 @@
 #PORT WHERE APP IS HOSTED
-REST_PORT=8080
-WS_PORT=8081
+SERVER_PORT=8081
+WS_PORT=8082
+REST_PORT=8083
 
 #SAMPLE DATABASE DATA
 DATABASE_NAME=frameworks
