--- a/package.json
+++ b/package.json
@@ -63,6 +63,11 @@
     "@types/mysql": "^2.15.19",
     "@types/node": "^14.18.1",
     "babel-jest": "^27.5.1",
+    "eslint": "^8.19.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
     "mocha": "^9.1.3"
