added flush-cache library and started ui development

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start_ws": "nodemon ws_server.js",
     "create-db": "node db/create-db.js",
     "test_mocha": "mocha tests/mocha",
-    "test_jest": "jest --clearCache && jest --detectOpenHandles tests/jest",
+    "test_jest": "jest --clearCache && jest tests/jest",
+    "test_jest_mocks": "jest --clearCache && jest tests/jest/mocks.test.js",
+    "test_jest_rest": "jest --clearCache && jest tests/jest/rest_server.test.js",
+    "test_jest_spies": "jest --clearCache && jest tests/jest/spies.test.js",
+    "test_jest_unit": "jest --clearCache && jest tests/jest/unit_tests.test.js",
     "jest_version": "jest --version",
     "mocha_version": "mocha --version",
     "jasmine_version": "jasmine -v",
@@ -31,6 +35,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jasmine-snapshot": "^1.8.1",
+    "mocha-chai-jest-snapshot": "^1.1.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
     "npm": "^8.10.0",
@@ -68,6 +74,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
+    "flush-cache": "^1.0.1",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
     "mocha": "^9.1.3"
