changed ui and added dom tests

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test_mocha_dom": "mocha tests/mocha/dom.test.mjs",
     "test_mocha_mocks": "mocha tests/mocha/mocks.test.mjs",
     "test_mocha_rest": "mocha tests/mocha/rest_server.test.mjs",
+    "test_mocha_snapshot": "mocha tests/mocha/snapshot.test.mjs",
     "test_mocha_spies": "mocha tests/mocha/spies.test.mjs",
     "test_mocha_unit": "mocha tests/mocha/unit_tests.test.mjs",
     "mocha_version": "mocha --version",
@@ -36,6 +37,7 @@
     "test_jasmine_dom": "cd tests && npx jasmine spec/test/dom.test.mjs",
     "test_jasmine_mocks": "cd tests && npx jasmine spec/test/mocks.test.mjs",
     "test_jasmine_rest": "cd tests && npx jasmine spec/test/rest_server.test.mjs",
+    "test_jasmine_snapshot": "cd tests && npx jasmine spec/test/snapshot.test.mjs",
     "test_jasmine_spies": "cd tests && npx jasmine spec/test/spies.test.mjs",
     "test_jasmine_unit": "cd tests && npx jasmine spec/test/unit_tests.test.mjs",
     "jasmine_version": "jasmine -v"
@@ -47,6 +49,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-dom": "^1.11.0",
+    "cheerio": "*",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -103,6 +106,8 @@
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jasmine_dom_matchers": "^1.4.5",
+    "@types/jasmine-jquery": "^1.5.34",
     "@types/jsdom": "^16.2.15",
     "@types/mysql": "^2.15.19",
     "@types/node": "^14.18.1",
