--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-dom": "^1.11.0",
+    "chai-jquery": "^2.1.0",
     "cheerio": "*",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
