tests abgeschlossen und tests durchgeführt

--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "start_rest": "nodemon rest_server.js",
     "start_ws": "nodemon ws_server.js",
     "create-db": "node db/create-db.js",
-    "test_jest": "jest --clearCache && jest tests/jest",
+    "test_jest_with_cache": "jest tests/jest",
+    "test_jest": "jest --clearCache && jest --no-color tests/jest",
     "test_jest_coverage": "jest --clearCache && jest --coverage tests/jest",
     "test_jest_details": "jest --clearCache && jest --verbose tests/jest",
-    "test_jest_dom_creation": "jest --clearCache && jest tests/jest/dom_creation.test.js",
-    "test_jest_dom_deletion": "jest --clearCache && jest tests/jest/dom_deletion.test.js",
-    "test_jest_dom_interaction": "jest --clearCache && jest tests/jest/dom_interaction.test.js",
-    "test_jest_dom": "jest --clearCache && jest tests/jest/dom.test.js",
-    "test_jest_mocks": "jest --clearCache && jest tests/jest/mocks.test.js",
-    "test_jest_rest": "jest --clearCache && jest tests/jest/rest_server.test.js",
-    "test_jest_spies": "jest --clearCache && jest tests/jest/spies.test.js",
-    "test_jest_unit": "jest --clearCache && jest tests/jest/unit_tests.test.js",
+    "test_jest_dom_creation": "jest --clearCache && jest --no-color tests/jest/dom_creation.test.js",
+    "test_jest_dom_deletion": "jest --clearCache && jest --no-color tests/jest/dom_deletion.test.js",
+    "test_jest_dom_interaction": "jest --clearCache && jest --no-color tests/jest/dom_interaction.test.js",
+    "test_jest_dom": "jest --clearCache && jest --no-color tests/jest/dom.test.js",
+    "test_jest_mocks": "jest --clearCache && jest --no-color tests/jest/mocks.test.js",
+    "test_jest_rest": "jest --clearCache && jest --no-color tests/jest/rest_server.test.js",
+    "test_jest_spies": "jest --clearCache && jest --no-color tests/jest/spies.test.js",
+    "test_jest_unit": "jest --clearCache && jest --no-color tests/jest/unit_tests.test.js",
     "test_jest_workers_25": "jest --clearCache && jest --maxWorkers=25% tests/jest",
     "test_jest_workers_50": "jest --clearCache && jest --maxWorkers=50% tests/jest",
     "test_jest_inBand": "jest --clearCache && jest --runInBand tests/jest",
     "test_jest_cache": "jest --clearCache",
     "jest_version": "jest --version",
     "test_mocha": "mocha tests/mocha",
+    "test_mocha_dom_creation": "mocha tests/mocha/dom_creation.test.mjs",
+    "test_mocha_dom_deletion": "mocha tests/mocha/dom_deletion.test.mjs",
     "test_mocha_dom_interaction": "mocha tests/mocha/dom_interaction.test.mjs",
     "test_mocha_dom": "mocha tests/mocha/dom.test.mjs",
     "test_mocha_mocks": "mocha tests/mocha/mocks.test.mjs",
@@ -35,6 +38,8 @@
     "test_mocha_unit": "mocha tests/mocha/unit_tests.test.mjs",
     "mocha_version": "mocha --version",
     "test_jasmine": "cd tests && npx jasmine",
+    "test_jasmine_dom_creation": "cd tests && npx jasmine spec/test/dom_creation.test.mjs",
+    "test_jasmine_dom_deletion": "cd tests && npx jasmine spec/test/dom_deletion.test.mjs",
     "test_jasmine_dom_interaction": "cd tests && npx jasmine spec/test/dom_interaction.test.mjs",
     "test_jasmine_dom": "cd tests && npx jasmine spec/test/dom.test.mjs",
     "test_jasmine_mocks": "cd tests && npx jasmine spec/test/mocks.test.mjs",
